# Gatherraa

./: .editorconfig  .env.example  .eslintignore  .eslintrc.json  .npmrc  .prettierignore  README.md
.github/workflows/: ci.yml
app/backend/: .env.example  package-lock.json  package.json  tsconfig.build.json
app/backend/scripts/: check-openapi.ts
app/backend/src/: main.ts  openapi.ts
app/backend/src/documents/services/: content-extraction.service.ts
app/backend/src/migrations/: 002-create-waitlist-tables.ts
app/backend/src/security/services/: compliance.service.ts
app/backend/src/task-queue/: task-queue.controller.ts  task-queue.module.ts  task-queue.spec.ts
app/backend/src/task-queue/processors/: blockchain.processor.ts  email.processor.ts  image.processor.ts  scheduled-task.processor.ts  waitlist-expiry.processor.ts  waitlist-invite.processor.ts  waitlist-notification.processor.ts
app/backend/src/task-queue/services/: task-queue.service.ts
app/backend/test/: global-guard.e2e-spec.ts
app/frontend/: .env.example
app/frontend/app/Components/: OfflineSyncProvider.tsx
app/frontend/app/demo/: page.tsx
app/frontend/components/transactions/: TransactionHistoryPanel.tsx  index.ts
app/frontend/components/ui/molecules/: index.ts
app/frontend/src/components/waitlist/: AvailabilityNotification.tsx  JoinWaitlist.tsx  useWaitlist.ts  waitlist.api.ts
app/image-service/: .env.example
contract/: Cargo.toml
contract/contracts/src/: cross_chain.rs  storage.rs
docs/: auth.md
docs/openapi/: gateway-swagger.yaml
(+4 files in other folders)
