[workspace]
resolver = "2"
members = [
    "common",
    "contracts",
    "ticket_contract",
    "escrow_contract",
    "multisig_wallet_contract",
]

[workspace.package]
version = "0.1.0"
authors = ["Gathera Team <dev@gathera.com>"]
edition = "2021"
repository = "https://github.com/Gatheraa/Gatherraa"
license = "MIT"

[workspace.dependencies]
soroban-sdk = { version = "23.5.2" }
gathera-common = { path = "./common" }
ticket_contract = { path = "./ticket_contract" }
escrow_contract = { path = "./escrow_contract" }
multisig_wallet_contract = { path = "./multisig_wallet_contract" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
lto = true
codegen-units = 1
